# weather-forecast

./: .gitmodules  CMakeLists.txt  Printer.h  README.md  constants.h  main.cpp  requests.h
Example/: configEX.omfl
